--- a/src/app/navbar/nav/nav.component.css
+++ b/src/app/navbar/nav/nav.component.css
@@ -49,10 +49,11 @@ body{
   border-radius: 50%;
 }
 .main-bod{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height:100vh ;
     padding-top: 70px;
     padding-left: 70px;
+    margin: 0;
     overflow-y:auto;
     background-color: #edf1f7;
 
