--- a/src/app/navbar/registrar-atencion/registrar-atencion.component.css
+++ b/src/app/navbar/registrar-atencion/registrar-atencion.component.css
@@ -29,14 +29,33 @@
     flex-direction: row;
   }
   .clipboard{
-    width: 80%;
-    margin-top: 20px;
+    width: 100%;
     max-width: 100%;
-    border-radius: 8px;
     height: 35px;
-    border: 0.0625rem solid #cbced2;
+    display: flex;
+    margin-bottom: 15px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+.clipboard label{
+    font-size: 13px;
+    font-weight: 700;
+    margin-bottom: 0;
+    margin-right: 30px;
+    align-items: center;
     display: flex;
     flex-direction: row;
+}
+.clipboard .link-cont{
+    width: 60%;
+    max-width: 100%;
+    display: flex;
+    border: 0.0625rem solid #cbced2;
+    flex-direction: row;
+    justify-content: center;
+    border-radius: 10px;
+    align-items: center;
 }
 .clipboard p{
     margin-bottom: 0;
@@ -65,17 +84,15 @@
 .no-data{
    
     width: 70%;
-    box-shadow: rgb(149 157 165 / 20%) 0px 8px 24px;
-    
+    border: 0.0625rem solid #e4e9f2;
     display: flex;
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-color: white;
     justify-content: center;
     flex-direction: column;
     align-items: center;
 }
 .cont-view-data{
-    width: 69%;
+    width: 70%;
     overflow: hidden;
     position: relative;
 }
@@ -83,96 +100,231 @@
 
    width: 100%;
    height: 100%;
-    /* margin-top: 50px; */
-    /* margin-right: 50px; */
-    display: grid;
-    grid-template-columns: 70% 30%;
-    grid-template-rows: 115px 1fr;
-  
-    /* border-radius: 10px; */
+   display: flex;
+   flex-direction: column;
     border: 0.0625rem solid #e4e9f2;
-    background-color: white;
 }
-
-.data_personal{
+/**Top data*/
+.view_data .top_data{
     display: flex;
-    font-size: 14px;
-    width: 100%;
-    height: 100%;
+    padding: 15px 5px;
+    min-height: max-content;
+    background-color: white;
     flex-direction: row;
 }
 
-.card-btns2{
-    width: 100%;
+.top_data .data_personal{
+    display: flex;
+    width: 70%;
+    font-size: 14px;
     height: 100%;
-    padding-top: 30px;
+   
+    flex-direction: row;
 }
-.card-btns2 button{
-    width: 80%;
-    height: 40%;
-    font-size: 13px;
-    margin: 0 auto;
+.top_data .options{
+    width: 30%;
+    align-items: center;
+    display: flex;
+}
+/**  Top Data left */
+.top_data .info_paciente{
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    justify-content: center;
+    padding-left: 10px;
+    height: 100%;
+}
+.top_data .info_paciente .paciente_data{
+    display: flex;
+    flex-direction: row;
+}
+
+.top_data .info_paciente .name{
     font-weight: bold;
-    text-transform: uppercase;
-    border-radius: 5px;
-    overflow: none;
+    max-width: 180px;
+    overflow: hidden;  
+    font-size: 14px;
+    color: black;
+}
+.info_paciente .date{
+    font-size: 12px;
+    width: 100px;
+    padding: 1px 10px;
+    display: flex;
+    font-weight: bold;
+    background-color: #90d4ce7d;
+    justify-content: center;
+    align-items: center;
+    margin-left: 15px;
+    border-radius: 10px;
+    color: #2cddb7;
+}
+.top_data .info_paciente .zona{
+    font-size: 13px;
+  }
+  .top_data .info_paciente i{
+      color: #26aa9f;
+      margin-right: 10px;
+  }
+.info_paciente .paciente_data_2 label{
+    color: #9797a5;
+    font-size: 13px;
+    font-weight: 600;
+}
+
+/**Top data butttons*/
+ 
+.button{
+    font-size: 13px;
     transition: transform .3s;
+    padding: 3px 13px;
+    border-radius: 4px;
+    color: white;
+    text-align: center;
+    width: 80%;
+    padding: 5px 10px;
+
 }
-.title-d2{
-    display: none;
+.green{
+    background: #06d79c;
+    border: 1px solid #06d79c;
+    box-shadow: 0 2px 2px 0 rgb(40 190 189 / 14%), 0 3px 1px -2px rgb(40 190 189 / 20%), 0 1px 5px 0 rgb(40 190 189 / 12%);
 }
-.card-btns2 button:hover{
+.red{
+    background: #ffb800;
+    box-shadow: 0 14px 26px -12px rgb(255 184 0), 0 4px 23px 0 rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(239 83 80 / 20%);
+    border: 1px solid #ffb800;
+}
+.blue{
+    background: #398bf7;
+    border: 1px solid #398bf7;
+    box-shadow: 0 14px 26px -12px rgb(23 105 255 / 42%), 0 4px 23px 0 rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(23 105 255 / 20%);
+}
+.grey{
+    background: #7a848f;
+    border: 1px solid #7a848f;
+  
+}
+ .top_data .options button:hover{
     transform: scale(1.02);
 }
-.card-btns2 button:nth-child(1){
-   
-    color: white;
-    border: none;
-    background:#f9a601;
-}
 
-
+/*Button data*/
 .list_reports{
-    
-    grid-column: 1 / 3;
     overflow: hidden;
+    background: white;
+    margin-top: 15px;
 }
-
-.title{
-    width: 100%;
-    font-size: 13px;
-    font-weight: bold;
-    color: black;
-    background: transparent;
-    padding-left: 10px;
-    padding-bottom: 10px;
-    text-transform: uppercase;
-}
-.imgheader{
-    margin-right: 20px;
-    border-radius: 50%;
-    box-shadow: 1px 4px 4px 0px rgba(0,0,0,0.2);
-    height: 30px;
-    width: 30px;
-}
-
 
 .list-aten{
     width: 100%;
     padding: 10px 10px;
 }
-.ver_atencion{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    color: cornflowerblue;
-    padding: 5px 15px;
-    border: none;
-    border-radius: 5px;
-    background-color: #ebecf0;
+
+
+.table .thead-dark th {
+    background-color: #06d79c;
+    border-color: #26aa9f;
 }
 
+.datos_consulta{
+    width: 90%;
+    margin: 0 auto;
+    height: 40%;
+    margin-bottom: 35px;
+}
+.datos_consulta h6{
+    font-weight: bold;
+    font-size: 12px;
+    color: #777;
+    background-color: white;
+    border-radius: 5px 5px 0px 0px;
+    border: 1px solid #dee2e6;
+    margin-bottom: 0;
+}
+.datos_consulta .bottom{
+    border: 1px solid #dee2e6;
+    display: flex;
+    flex-direction: row;
+    border-radius: 0px 0px 5px 5px;
+    height: auto;
+}
+.bottom .pt1{
+ width: 65%;
+ display: flex;
+ flex-direction: column;
+ height: 100%;
+}
+.pt1 div{
+    height: 50%;display: flex;flex-direction: column;
+}
+.pt1 div label:first-child{
+color: #5a6574;
+padding: 5px 15px;
+font-weight: bold;
+font-size: 12px;
+margin-bottom: 0px;
+}
+.pt1 div label:last-child{
+    font-size: 13px;
+    padding-left:45px;
+}
+.pt1 div i{
+    color: white;
+    background-color: #50e3c2;
+    margin-right: 15px;
+    border-radius: 3px;
+    font-size: 12px;
+    padding: 2px 4px;
+    text-align: center;
+}
+.bottom .pt2{
+    width: 35%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-left: 1px solid #dee2e6;
+}
+.list-pac::-webkit-scrollbar {
+    width:  3px;
+    height: 4px;
+    box-shadow: rgb(149 157 165 / 20%) 0px 8px 24px;
+ }
+  .list-pac::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  .list-pac::-webkit-scrollbar-thumb {
+    background-color: #dbeaff;
+    border-radius: 1px;
+  }
+.directorio{
+    text-align: end;
+    padding-right: 10px;
+    font-size: 14px;
+    min-width: 40%;
+ }
+
+/*--------------------Registrar Atencion --------------*/
+#register_aten.modal.show .modal-dialog {
+    transform: none;
+    max-width: 1000px;
+}
+#register_aten .modal-content{
+    border-radius: 0px;
+    overflow: hidden;
+}
+#register_aten .modal-body{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-position: -34px -7px;
+  background-size: 20% 36%;
+  background-image: url(https://us.123rf.com/450wm/swetlanas/swetlanas1905/swetlanas190500025/123747998-camino-de-pasos-de-pata-de-p%C3%A1jaro-negro-vector-aislado-sobre-fondo-blanco.jpg?ver=6);
+  background-repeat: no-repeat;
+}
 .info_ev{
     position: absolute;
     background: transparent;
@@ -211,28 +363,6 @@
      transform: scale(1);
 
 }
-.table .thead-dark th {
-    background-color: #0f3971;
-}
-/*--------------------Registrar Atencion --------------*/
-#register_aten.modal.show .modal-dialog {
-    transform: none;
-    max-width: 1000px;
-}
-#register_aten .modal-content{
-    border-radius: 0px;
-    overflow: hidden;
-}
-#register_aten .modal-body{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  background-position: -34px -7px;
-  background-size: 20% 36%;
-  background-image: url(https://us.123rf.com/450wm/swetlanas/swetlanas1905/swetlanas190500025/123747998-camino-de-pasos-de-pata-de-p%C3%A1jaro-negro-vector-aislado-sobre-fondo-blanco.jpg?ver=6);
-  background-repeat: no-repeat;
-}
-
 #register_aten .form-sesion{
     width: 100%;
     position: relative;
@@ -393,48 +523,53 @@
     color: #444;
 }
 
+
+
+
+
+/*Lista de Pacientes style */
 /*List de cards*/
-.list-pac{
-        
-        width: 30%;
-        max-height: 83%;
-        overflow-y: auto;
-        background: white;
-        margin-left: 15px;
-        display: flex;
-        flex-direction: column;
-        padding: 15px 5px;
-        border: 0.0625rem solid #e4e9f2;
-}
 
-.list-pac::-webkit-scrollbar {
-    width:  3px;
-    height: 4px;
-    box-shadow: rgb(149 157 165 / 20%) 0px 8px 24px;
- }
-  .list-pac::-webkit-scrollbar-track {
+.title{
+    width: 100%;
+    font-size: 13px;
+    padding: 10px 15px;
+    padding-left: 15px 1px;
+    color: #26aa9f;
     background: transparent;
-  }
-  .list-pac::-webkit-scrollbar-thumb {
-    background-color: #dbeaff;
-    border-radius: 1px;
-  }
-
-/*Card 2 style */
+    text-transform: uppercase;
+}
+.list-pac{
+    width: 30%;
+    max-height: 100%;
+    background: white;
+    margin-left: 15px;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 10px;
+    border: 0.0625rem solid #e4e9f2;
+}
+.container-card2{
+    min-height: max-content;
+    max-height: 90%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 100%;
+}
 .card2{
-    min-height: 150px;
+    min-height: max-content;
     display: flex;
     margin: 0 auto;
+    cursor: pointer;
     width: 95%;
+    box-shadow: inset 0.5em 0 0 0  #50e3c285;
     margin-bottom: 10px;
-    border-radius: 5px;
     flex-direction: row;
     background-color: white;
     border: 1px solid #dee2e6;
-    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
-    overflow: hidden;
     transition: transform .3s;
 }
+
 .card2 .left{
     width: 23%;
     border-right:1px solid #dee2e6 ;
@@ -445,27 +580,63 @@
     align-items: center;
 }
 .card2 .rigth{
-    display: flex;justify-content: center;
+    display: flex;
+    justify-content: space-between;
     width: 77%;
     flex-direction: column;
-    padding: 5px 10px 0px 10px;
+    padding: 10px;
 }
-.card2 .rigth label:first-child{
-    font-weight: 600;font-size: 13px;color: #777;
+
+.card2 .left label{
+    font-size: 18px;
+    font-weight: 700;
+    text-align:center;
 }
-.card2 .rigth label:nth-child(2){
-    font-size: 13px; color: #a8a8a8;max-height:40px;overflow: hidden;
+.card2 .left i{
+      color:#29b2e2;
 }
-.card2 .rigth label:nth-child(3){
-    width: 100%;text-align: center;color: #29b2e2;font-size:
-            13px;margin-bottom: 0px;margin-top: 10px;
+.card2 .rigth .head{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 10px;
+    width: 100%;
 }
+.card2 .rigth .head label{
+    width: 65%;
+    font-weight: 600;
+    text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+    color: black;
+    max-width: 65%;
+    font-size: 13px;
+    margin: 0;
+}
+.card2 .rigth .head span{
+    width: 35%;
+    max-width: 35%;
+}
+.card2 .rigth .description{
+    font-size: 13px;
+    color: #98a1af;
+    max-height: 97px;
+    overflow: hidden;
+
+    width: 100%;
+}
+.card2 .rigth .nro_a{
+  font-size: 13px;
+  width: 100%;
+  text-align: center;
+  color: #29b2e2;
+}
+
 .card2:hover{
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     transform: scale(1.01);
 }
 
-.card2 .category{
+.card2 .category,.top_data .info_paciente .category{
     margin-left: 15px;text-align: center;
     font-size: 12px;
     font-weight: bold;
@@ -476,15 +647,9 @@
   
 }
 .card2.xdd{
-    background-color: #0f3971 !important;
-    color: white;
+    box-shadow: inset 0.5em 0 0 0 #50e3c2;
 }
-.card2.xdd label:first-child{
-    color: white !important;
-}
-.card2.xdd label:nth-child(2){
-    color: white !important;
-}
+
 /*       QUIZZZZZ       */
 .quizz{
     width: 100%;
@@ -508,6 +673,8 @@
     border: 1px solid;
     text-align: center;
 }
+
+
 
 /*Modal Ver observaciones*/
 .input-style2{
@@ -535,66 +702,6 @@
 
 
 
-/**    PANEL PrINCIPAL */
-.info_paciente{
-    display: flex;
-    padding-top: 30px;
-    flex-direction: column;
-    width: 85%;
-    padding-left: 10px;
-
-    height: 100%;
-}
-.name{
-    font-weight: bold;
-    max-width: 180px;
-    overflow: hidden;
-   
-    font-size: 14px;
-    text-align: center;
-    color: #5f6668;
-}
-.paciente_data{
-    display: flex;
-    flex-direction: row;
-}
-
-.info_paciente .category{
-    font-size: 12px;
-    font-weight: bold;
-    width: 66px;
-    padding: 1px 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 15px;
-    border-radius: 10px;
-    color: white;
-  
-}
-.info_paciente .date{
-    font-size: 12px;
-    width: 100px;
-    padding: 1px 10px;
-    display: flex;
-    font-weight: bold;
-    background-color: #cddcf0;
-    justify-content: center;
-    align-items: center;
-    margin-left: 15px;
-    border-radius: 10px;
-    color: #0f3971;
-
-
-}
-.info_paciente .paciente_data_2 label{
-    color: #9797a5;
-    margin-left: 15px;
-    font-size: 13px;
-    font-weight: 600;
-}
-
-
 
 #ver_hist .nav-tabs .nav-item.show .nav-link,#ver_hist .nav-tabs .nav-link.active {
     color: black;
@@ -619,12 +726,12 @@
     border: none;
 }
 .view_data .nav-tabs .nav-item.show .nav-link,.view_data .nav-tabs .nav-link.active {
-    color: black;
+    color: #398bf7;
     font-weight: bold;
     font-size: 14px;
     background-color: #fff;
     border: none;
-    border-bottom:5px solid #0f3971;
+    border-bottom: 2px solid #398bf7;
 }
 .view_data .nav-tabs .nav-item.show .nav-link,.view_data .nav-tabs .nav-link{
     color: #5f6668;
@@ -638,88 +745,10 @@
 .tab-content{
     max-height: 93%;
     background-color: #fafcfb;
-    box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
     padding: 25px 25px;
     overflow-y: auto;
 }
 
-.datos_consulta{
-    width: 90%;
-    margin: 0 auto;
-    height: 40%;
-    margin-bottom: 35px;
-}
-.datos_consulta h6{
-    font-weight: bold;
-    font-size: 12px;
-    color: #777;
-    background-color: white;
-    border-radius: 5px 5px 0px 0px;
-    border: 1px solid #dee2e6;
-    margin-bottom: 0;
-}
-.datos_consulta .bottom{
-    border: 1px solid #dee2e6;
-    display: flex;
-    flex-direction: row;
-    border-radius: 0px 0px 5px 5px;
-    height: auto;
-}
-.bottom .pt1{
- width: 65%;
- display: flex;
- flex-direction: column;
- height: 100%;
-}
-.pt1 div{
-    height: 50%;display: flex;flex-direction: column;
-}
-.pt1 div label:first-child{
-color: #0f3971;
-padding: 5px 15px;
-font-weight: bold;
-font-size: 14px;
-margin-bottom: 0px;
-}
-.pt1 div label:last-child{
-    font-size: 13px;
-    padding-left:45px;
-}
-.pt1 div i{
-    color: white;
-    background-color: #f9a601
-    ;
-    margin-right: 15px;
-    border-radius: 3px;
-    font-size: 12px;
-    padding: 2px 4px;
-    text-align: center;
-}
-.bottom .pt2{
-    width: 35%;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-left: 1px solid #dee2e6;
-}
-.bottom .pt2 button{
-    width: 80%;
-    height: 25%;
-    font-size: 14px;
-    font-weight: bold;
-    border: none;
-    color: white;
-    border-radius: 10px;
-    margin-bottom: 15px;
-}
-.pt2 button:first-child{
-    background: #0f3971;
-}
-.pt2 button:last-child{
-    background-color: #444;
-}
 .tab-pane{
     height: 100%;
 }
@@ -852,53 +881,46 @@ h6{
 
 
 
-.directorio{
-    text-align: end;
-    padding-right: 10px;
-    font-size: 14px;
-    min-width: 40%;
- }
  @media only screen and (max-width: 1305px) {
-    .title-d2{
-        display: block;
-        font-size: 13px;
-        font-weight: bold;
-        color: black;
-        margin-bottom: 10px;
-        padding-left: 25px;
-        background: transparent;
-
-        text-transform: uppercase;
+    body{
+        padding-left: 0;
+        padding-right: 0;
     }
-    .title{
-        display: none;
-    }
+   /*Lista de pacientes responsive*/
+   .list-pac{
+    width: 100%;
+    margin-left: 0;
+    flex-direction: column;
+    padding-left: 15px;
+    margin-bottom: 15px;
+}
+  .card2{
+    max-width: 35%;
+    min-width: 35%;
+    max-height: 150px;
+   margin-left: 0;
+      margin-right: 15px;
+  }
+.container-card2{
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: auto;
+}
   .container{
     max-height: max-content;
       flex-direction: column-reverse;
       justify-content: flex-end;
   }
-  .list-pac{
-      width: 100%;
-      margin-left: 0;
-      flex-direction: row;
-      padding-bottom: 0;
-      padding-left: 15px;
-      margin-bottom: 15px;
-  }
+
 .cont-view-data{
       width: 100%;
     
   }
   .no-data{
+      padding: 25px;
       width: 100%;
   }
-  .card2{
-    max-width: 35%;
-    min-width: 35%;
-   margin-left: 0;
-      margin-right: 15px;
-  }
+ 
  }
  @media only screen and (max-width: 1024px) {
    
@@ -906,24 +928,55 @@ h6{
         max-width: 50%;
         min-width: 50%;
     }
+
     }
  
 
    @media only screen and (max-width: 768px) {
-   
+   .clipboard{
+       flex-direction: column;
+   }
+   .clipboard .link-cont{
+       width: 90%;
+   }
     .card2{
-        max-width:90%;
-        min-width: 90%;
+        max-width:100%;
+        min-width: 100%;
     }
-    .datos_consulta .bottom{
-        flex-wrap: wrap;
+    .view_data .top_data{
+        flex-direction: column;
     }
-    .datos_consulta .bottom .pt1,.datos_consulta .bottom .pt2{
+    .top_data .options,.top_data .data_personal{
         width: 100%;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+    .top_data .info_paciente .paciente_data{
+          flex-direction: column;
+          align-items: center;
     }
     }
 
 
 
-
+    @media only screen and (max-width: 425px) {
+   
+        .card2{
+            max-width:150%;
+            min-width: 150%;
+        }
+        .tab-content{
+            padding: 25px 0px;
+        }
+        .datos_consulta .bottom{
+            flex-direction: column;
+        }
+        .datos_consulta .bottom .pt1,
+        .datos_consulta .bottom .pt2{
+            width: 100%;
+            margin-bottom: 10px;
+       
+        }
+    }
    
