--- a/src/app/navbar/bandeja-in/bandeja-in.component.css
+++ b/src/app/navbar/bandeja-in/bandeja-in.component.css
@@ -53,7 +53,7 @@ color: #13c298;
  
   .list-asignaciones .bottom{
     width: 95%;
-    max-height: 100vh;
+    max-height: 90%;
     background: white;
     display: flex;
     flex-direction: column;
@@ -184,7 +184,7 @@ margin-bottom: 0px;
     overflow-y: auto;
     overflow-x: hidden;
     background-color: aqua;
-    margin-top: 1.5%;
+    margin-top: 22px;
     position: relative;
     border-radius: 5px;
     background-color: white;
@@ -224,7 +224,7 @@ margin-bottom: 0px;
   transform: translateX(4%) scale(1.01);
 }
 .asignacion .circle3 label{
-  margin-bottom: 20px;
+  
   font-size: 22px;
 }
 .asignacion.xdd i{
@@ -248,7 +248,7 @@ margin-bottom: 0px;
     position: absolute;
     justify-content: center;
     top: -17px;
-    align-items: end;
+    align-items: center;
     margin-right: 10px;
     height: 57%;
     -webkit-clip-path: circle(50% at 50% 50%);
@@ -546,7 +546,19 @@ padding: 0.75rem;
   transition-delay: calc((var(--n) - 1) * 0.1s);
   z-index: -1;
 }
+.select_type{
+  padding: 5px 10px;
+  font-size: 12px;
+  border: 2px solid rgba(100, 100, 111, 0.2);
+  text-transform: uppercase;
+  width: 30%;
+  height: 80%;
+  background: white;
+  outline: none;
+  border-radius: 5px;
+  color: #444;
 
+}
 
 .hov:hover span {
   transform: translateY(0) scale(2);
@@ -666,45 +678,55 @@ color: #198d8d;
   display: flex;flex-direction: row;    height: 100%;
 }
 @media only screen and (max-width: 1150px) {
-  
+  .container{
+    min-height: 100%;
+    height: max-content;
+    justify-content: flex-start;
+  }
   .container-content{
     
     flex-direction: column;
   }
+  .no-result{
+    padding: 20px 10px;
+  }
  .container-content .list-asignaciones{
    width: 100%;
-   height: 30%;
-   margin-bottom: 15px;
-   padding-left: 22px;
-   padding-right: 20px;
+   height: max-content;
+  
+   padding-left: 10px;
+   padding-right: 10px;
  }
  .list-asignaciones .list{
    overflow-y: hidden;
    display: flex;
+   padding: 10px;
    flex-direction: row;
    overflow-x: auto;
 
  }
  .list-asignaciones .bottom{
-   height: 100%;
+   height: max-content;
    padding-top: 0;
    width: 100%;
  }
  .list-asignaciones .top{
   min-height: 30%;
-  padding: 2px 35px 0px 35px;
+  padding: 10px 35px 10px 35px;
   width: 100%;
  }
  .visualizador{
-   width: 100%;
-   
-   border-top: 5px solid #0f3971;
+   width: 98%;
+   margin-top: 0;
+   margin: 0 auto;
+   border-radius: 0;
+   border-top: 5px solid #26aa9f;
    height: 100%;
  }
  .asignacion{
   min-width: 35%;
   
-  height: 100%;
+  height: 130px;
  margin-bottom: 0;
  margin-right: 15px;
  }
@@ -741,8 +763,11 @@ color: #198d8d;
    .divider .pt1{
      width: 100%;
    }
-  .list-asignaciones .top{
+  /* .list-asignaciones .top{
     padding: 2px 10px 0px 10px;
+  } */
+  .no-result h6{
+ text-align: center;
   }
  }
  @media only screen and (max-width: 430px) {
@@ -752,20 +777,16 @@ color: #198d8d;
   b .new{
     display: none;
   }
-
-
+.top .title1{
+  font-size: 16px;
 }
-
+  .list-asignaciones .top{
+    padding: 10px;
+  }
 .select_type{
-  padding: 5px 10px;
+  width: 50%;
   font-size: 12px;
-  border: 2px solid rgba(100, 100, 111, 0.2);
-  text-transform: uppercase;
-  width: 30%;
-  height: 80%;
-  background: white;
-  outline: none;
-  border-radius: 5px;
-  color: #444;
+}
 
 }
+
