--- a/src/app/home/registro-paciente/registro-paciente.component.html
+++ b/src/app/home/registro-paciente/registro-paciente.component.html
@@ -194,6 +194,7 @@
                   <option value="DRE PASCO">DRE PASCO</option>
                   <option value="Redes Sociales">Redes Sociales</option>
                   <option value="Amigo">Amigo</option>
+                  <option value="Municipalidad de Chaclacayo">Municipalidad de Chaclacayo</option>
                   <option value="Iglesia">Iglesia</option>
                 </select>
               </div>
