--- a/src/app/navbar/datos-user/datos-user.component.html
+++ b/src/app/navbar/datos-user/datos-user.component.html
@@ -39,7 +39,7 @@
       <div class="rigth-content">
         
       
-            <h4>Mi Perfil</h4>
+            <!-- <h4>Mi Perfil <button (click)="exportexcel()">Down</button></h4>  -->
             <h5>Informacion Personal</h5>
             <form [formGroup]="datos_personales" class="datapersonal">
               <div class="input-style wi-50" >
